--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.6.0",
     "css-loader": "^2.1.1",
+    "domelementtype": "^2.3.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html2canvas": "^1.0.0-rc.3",
