--- a/config/storage.yml
+++ b/config/storage.yml
@@ -36,7 +36,8 @@ local:
 google:
   service: GCS
   project: globsupplies
-  credentials: <%= Rails.root.join("config/google.json") %>
+  # credentials: <%= Rails.root.join("config/google.json") %>
+  credentials: <%= "#{shared_path}/google.json" %>
   bucket: globsupplies
   # object_defaults:
   #   cache-control: "public, max-age=84600"
