--- a/config/storage.yml
+++ b/config/storage.yml
@@ -36,8 +36,9 @@ local:
 google:
   service: GCS
   project: globsupplies
-  # credentials: <%= Rails.root.join("config/google.json") %>
-  credentials: <%= "#{shared_path}/config/google.json" %>
+  credentials: <%= Rails.root.join("config/google.json") %>
+  # credentials: <%= "#{shared_path}/config/google.json" %>
   bucket: globsupplies
   # object_defaults:
   #   cache-control: "public, max-age=84600"
+  
